# compiler

./: .gitignore  CMakeLists.txt  grammar.ebnf  output.txt  prova.txt
.cache/clangd/index/: lexer.c.7B462D455D63BDF1.idx  lexer.h.7000190EA0ECCCDA.idx  main.c.00A64E7D2E037DAB.idx  tokens.h.64E796BE74847AAE.idx  utils.c.58AFD85EED76B01A.idx  utils.h.FF2A2EC13F7DFA7F.idx
include/: codegen.h  compiler.h  errors.h  lexer.h  parser.h  tokens.h  utils.h
src/: codegen.c  compiler.c  errors.c  lexer.c  main.c  parser.c  utils.c
